# aerodynamics_graphics

./: .gitignore  CMakeLists.txt  FluidSim.cpp  FluidSim.h  README.md  Triangle.sln  Triangle.vcxproj  Triangle.vcxproj.filters  glad.c  main.cpp  setup.bat
